// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RegistrationEventInfo does not render empty contact info 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation2 css-1exk97n-MuiPaper-root"
  >
    <div
      class="MuiBox-root css-i357mj"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeSmall css-tov16f-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="KeyboardArrowDownIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7.41 8.59 12 13.17l4.59-4.58L18 10l-6 6-6-6z"
          />
        </svg>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <div
        class="MuiBox-root css-1qbrvqz"
      >
        <div
          class="MuiBox-root css-1jw9kr7"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
          >
            NOU dateFormat.datespan test location (test)
          </p>
          <p
            class="MuiFormHelperText-root css-ml08u8-MuiFormHelperText-root"
          />
        </div>
        <div
          class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-pwcg7p-MuiCollapse-root"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
            >
              <div
                class="MuiBox-root css-e1h6et"
              >
                <div
                  class="MuiGrid-root MuiGrid-container css-pusk48-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-sm-12 MuiGrid-grid-md-true css-1gzo6kn-MuiGrid-root"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-37visp-MuiGrid-root"
                    >
                      <span
                        class="MuiTypography-root MuiTypography-caption css-1sn4lm3-MuiTypography-root"
                      >
                        entryTime
                      </span>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-eva6pi-MuiGrid-root"
                    >
                      <div
                        class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
                      >
                        <b>
                          dateFormat.datespan
                        </b>
                         
                      </div>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-37visp-MuiGrid-root"
                    >
                      <span
                        class="MuiTypography-root MuiTypography-caption css-1sn4lm3-MuiTypography-root"
                      >
                        event.organizer
                      </span>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-eva6pi-MuiGrid-root"
                    >
                      <div
                        class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
                      >
                        Suomen Noutajakoirajärjestö ry
                      </div>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-37visp-MuiGrid-root"
                    >
                      <span
                        class="MuiTypography-root MuiTypography-caption css-1sn4lm3-MuiTypography-root"
                      >
                        event.judges
                      </span>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-eva6pi-MuiGrid-root"
                    >
                      <div
                        class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
                      >
                        Tuomari 1
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-sm-12 MuiGrid-grid-md-true css-1gzo6kn-MuiGrid-root"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-37visp-MuiGrid-root"
                    >
                      <span
                        class="MuiTypography-root MuiTypography-caption css-1sn4lm3-MuiTypography-root"
                      >
                        event.cost
                      </span>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-eva6pi-MuiGrid-root"
                    >
                      <div
                        class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
                      >
                        123 €event.costMember 123 €
                      </div>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-37visp-MuiGrid-root"
                    >
                      <span
                        class="MuiTypography-root MuiTypography-caption css-1sn4lm3-MuiTypography-root"
                      >
                        event.priority
                      </span>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-eva6pi-MuiGrid-root"
                    >
                      <div
                        class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
                      >
                        <div
                          class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1kzz4rd-MuiChip-root"
                        >
                          <span
                            class="MuiChip-label MuiChip-labelSmall css-wjsjww-MuiChip-label"
                          >
                            Jäsenet
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-37visp-MuiGrid-root"
                    >
                      <span
                        class="MuiTypography-root MuiTypography-caption css-1sn4lm3-MuiTypography-root"
                      >
                        event.description
                      </span>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-eva6pi-MuiGrid-root"
                    >
                      <div
                        class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
                      >
                        test
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RegistrationEventInfo renders 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation2 css-1exk97n-MuiPaper-root"
  >
    <div
      class="MuiBox-root css-i357mj"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeSmall css-tov16f-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="KeyboardArrowDownIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7.41 8.59 12 13.17l4.59-4.58L18 10l-6 6-6-6z"
          />
        </svg>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <div
        class="MuiBox-root css-1qbrvqz"
      >
        <div
          class="MuiBox-root css-1jw9kr7"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
          >
            NOU dateFormat.datespan test location (test)
          </p>
          <p
            class="MuiFormHelperText-root css-ml08u8-MuiFormHelperText-root"
          />
        </div>
        <div
          class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-pwcg7p-MuiCollapse-root"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
            >
              <div
                class="MuiBox-root css-e1h6et"
              >
                <div
                  class="MuiGrid-root MuiGrid-container css-pusk48-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-sm-12 MuiGrid-grid-md-true css-1gzo6kn-MuiGrid-root"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-37visp-MuiGrid-root"
                    >
                      <span
                        class="MuiTypography-root MuiTypography-caption css-1sn4lm3-MuiTypography-root"
                      >
                        entryTime
                      </span>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-eva6pi-MuiGrid-root"
                    >
                      <div
                        class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
                      >
                        <b>
                          dateFormat.datespan
                        </b>
                         
                      </div>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-37visp-MuiGrid-root"
                    >
                      <span
                        class="MuiTypography-root MuiTypography-caption css-1sn4lm3-MuiTypography-root"
                      >
                        event.organizer
                      </span>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-eva6pi-MuiGrid-root"
                    >
                      <div
                        class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
                      >
                        Suomen Noutajakoirajärjestö ry
                      </div>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-37visp-MuiGrid-root"
                    >
                      <span
                        class="MuiTypography-root MuiTypography-caption css-1sn4lm3-MuiTypography-root"
                      >
                        event.judges
                      </span>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-eva6pi-MuiGrid-root"
                    >
                      <div
                        class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
                      >
                        Tuomari 1
                      </div>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-37visp-MuiGrid-root"
                    >
                      <span
                        class="MuiTypography-root MuiTypography-caption css-1sn4lm3-MuiTypography-root"
                      >
                        event.official
                      </span>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-eva6pi-MuiGrid-root"
                    >
                      <div
                        class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
                      >
                        Teemu Toimitsija, 040-official, official@example.com
                      </div>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-37visp-MuiGrid-root"
                    >
                      <span
                        class="MuiTypography-root MuiTypography-caption css-1sn4lm3-MuiTypography-root"
                      >
                        event.secretary
                      </span>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-eva6pi-MuiGrid-root"
                    >
                      <div
                        class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
                      >
                        Siiri Sihteeri, 040-secretary, secretary@example.com
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-sm-12 MuiGrid-grid-md-true css-1gzo6kn-MuiGrid-root"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-37visp-MuiGrid-root"
                    >
                      <span
                        class="MuiTypography-root MuiTypography-caption css-1sn4lm3-MuiTypography-root"
                      >
                        event.cost
                      </span>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-eva6pi-MuiGrid-root"
                    >
                      <div
                        class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
                      >
                        123 €event.costMember 123 €
                      </div>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-37visp-MuiGrid-root"
                    >
                      <span
                        class="MuiTypography-root MuiTypography-caption css-1sn4lm3-MuiTypography-root"
                      >
                        event.priority
                      </span>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-eva6pi-MuiGrid-root"
                    >
                      <div
                        class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
                      >
                        <div
                          class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1kzz4rd-MuiChip-root"
                        >
                          <span
                            class="MuiChip-label MuiChip-labelSmall css-wjsjww-MuiChip-label"
                          >
                            Jäsenet
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-37visp-MuiGrid-root"
                    >
                      <span
                        class="MuiTypography-root MuiTypography-caption css-1sn4lm3-MuiTypography-root"
                      >
                        event.description
                      </span>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-eva6pi-MuiGrid-root"
                    >
                      <div
                        class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
                      >
                        test
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
